; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_base/extr_tree.c_txn_body_file_checksum.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_base/extr_tree.c_txn_body_file_checksum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.file_checksum_args = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, %struct.TYPE_5__*)* @txn_body_file_checksum to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @txn_body_file_checksum(i8* %0, %struct.TYPE_5__* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca %struct.file_checksum_args*, align 8
  %6 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.file_checksum_args*
  store %struct.file_checksum_args* %8, %struct.file_checksum_args** %5, align 8
  %9 = load %struct.file_checksum_args*, %struct.file_checksum_args** %5, align 8
  %10 = getelementptr inbounds %struct.file_checksum_args, %struct.file_checksum_args* %9, i32 0, i32 3
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.file_checksum_args*, %struct.file_checksum_args** %5, align 8
  %13 = getelementptr inbounds %struct.file_checksum_args, %struct.file_checksum_args* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @get_dag(i32** %6, i32 %11, i32 %14, %struct.TYPE_5__* %15, i32 %18)
  %20 = call i32 @SVN_ERR(i32 %19)
  %21 = load %struct.file_checksum_args*, %struct.file_checksum_args** %5, align 8
  %22 = getelementptr inbounds %struct.file_checksum_args, %struct.file_checksum_args* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.file_checksum_args*, %struct.file_checksum_args** %5, align 8
  %25 = getelementptr inbounds %struct.file_checksum_args, %struct.file_checksum_args* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load i32*, i32** %6, align 8
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i32* @svn_fs_base__dag_file_checksum(i32 %23, i32 %26, i32* %27, %struct.TYPE_5__* %28, i32 %31)
  ret i32* %32
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @get_dag(i32**, i32, i32, %struct.TYPE_5__*, i32) #1

declare dso_local i32* @svn_fs_base__dag_file_checksum(i32, i32, i32*, %struct.TYPE_5__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
